--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ h2 {
   text-align: center;
 }
 p {
-  width: 500px;
   font-size: 20px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
@@ -96,10 +95,45 @@ img {
 
 .close {
   color: red;
-  font-size: 24px;
+  font-size: 35px;
   width: 40px;
-  display: flex;
 }
+
+/* .close:hover::after{
+  content: attr(data-title); 
+  z-index: 1;
+  background: rgba(255,255,230,0.9); 
+  font-family: Arial, sans-serif; 
+  font-size: 15px; 
+  border: 1px solid #333; 
+  height: 80px;
+  width: 40px;
+  padding: 10px;
+  margin-left: 30px;
+} */
+
+.accordion + p{
+  display: none;
+}
+.accordion.active + p{
+  display: block;
+}
+
+.accordion{
+  background-color:transparent;
+  color: green;
+  cursor: pointer;
+  width: 25px;
+  height: 35px;
+  padding: 4px;
+  text-align: left;
+  border: none;
+  outline: none;
+  font-size: 35px; 
+}
+
+
+
 
 
 /*
