--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h2 {
   text-align: center;
 }
 p {
+  padding: 25px 0 25px 0;
   font-size: 20px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
